<resources>
    <string name="app_name">Cinema Booking System</string>
    <string name="cinema_booking_system">Cinema Booking System</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_a_user">Already a User?</string>
    <string name="log_in">Log In</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="name">Name :</string>
    <string name="enter_name">Enter Name</string>
    <string name="email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_phone_no">Enter Phone No</string>
    <string name="submit">Submit</string>
    <string name="info_text">Developers: Namit Gupta Aditya Beri</string>
    <string name="hello_pavilion">Hello Pavilion</string>
    <string name="log_out">Log Out</string>
    <string name="button">Button</string>
    <string name="download">Download</string>
    <string name="movies_currently_showing">Movies Currently Showing</string>
    <string name="_0_out_of_100">0 out of 100</string>
    <string name="book">Book</string>
    <string name="click_on_image_to_get_more_info">(Click on Image to get more Info)</string>
    <string name="mirzapur_2">Mirzapur 2</string>
    <string name="release_date_23_october">Release Date: 23 October</string>
    <string name="duration_5_hrs">Duration: 5 hrs</string>
    <string name="rating_9_8">Rating: 9.8</string>
    <string name="work_in_progress">Work in Progress......</string>
    <string name="namitg">namitg</string>
    <string name="name_goes_here">Name goes here</string>
    <string name="audi_1">Audi 1</string>
    <string name="starts_at_22_00">Starts at 22:00</string>
    <string name="base_price_rs_300">Base Price: Rs.300</string>
    <string name="audi_1_mirzapur_2">Audi 1: Mirzapur 2</string>
    <string name="timings_20_00_to_00_00">Timings: 20:00 to 00:00</string>
    <string name="select_seats_to_be_booked">Select Seats to be Booked</string>
    <string name="all_eyes_this_way">All Eyes This Way</string>
    <string name="total_amount_rs_300">Total Amount: Rs.300</string>
    <string name="proceed">Proceed</string>
    <string name="do_you_want_to_add_some_snacks_beverages">Do you want to add some Snacks/Beverages??</string>
    <string name="no">no</string>
    <string name="yes">yes</string>
    <string name="review">Review Your Booking</string>
    <string name="proceed_to_payment">proceed to payment</string>
    <string name="credit_card">Credit Card</string>
    <string name="ticket_booked">Ticket Booked !!!</string>
    <string name="todo">TODO</string>
    <string name="price_rs_30">Price: Rs.30</string>
    <string name="burger">Burger</string>
    <string name="amount_to_be_paid_rs_580">Amount to be Paid: Rs. 580</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="movie_name_mirzapur_2">Movie Name: Mirzapur 2</string>
    <string name="total_amount_rs_600">Total Amount: Rs.600</string>
    <string name="snacks_pre_ordered_2">Snacks Pre-ordered: 2</string>
    <string name="seats_booked_3">Seats Booked: 3</string>
    <string name="theatre_room_audi_4">Theatre Room: Audi 4</string>
    <string name="starts_at_2200">Starts at: 22:00</string>
    <string name="please_download_your_movie_ticket_receipt_by_clicking_this_icon">Please Download your Movie Ticket Receipt by clicking this icon:</string>
    <string name="facebook_login">Facebook Login</string>

    <string name="facebook_app_id">280833286771909</string>
    <string name="fb_login_protocol_scheme">fb280833286771909</string>

</resources>