<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_temp"
    tools:context=".after_payment">

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/imageView_gif1"
        android:layout_width="142dp"
        android:layout_height="127dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@raw/done_animated2"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/ticket_booked"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toEndOf="@+id/imageView_gif1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/please_download_your_movie_ticket_receipt_by_clicking_this_icon"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_gif1" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/download_receipt_image"
        android:layout_width="217dp"
        android:layout_height="132dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="128dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/download_receipt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.878"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:onClick="imageView_download"/>
</androidx.constraintlayout.widget.ConstraintLayout>